--- a/src/views/machine/deviceDisplay.scss
+++ b/src/views/machine/deviceDisplay.scss
@@ -125,6 +125,9 @@
             animation: cc 0.5s ease-in-out infinite;
             background-color: #5094ff;
         }
+        .linePlay {
+            background-color: #fff;
+        }
         @keyframes cc {
             0% {
                 opacity: 1;
