--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -88,11 +88,31 @@ div:focus {
       transparent
   );
 }
+
+.linePlayBox {
+  &:before{
+    content: "";
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/line/lineBg.png);
+    background-size: 100% 100%;
+    z-index: -1;
+  }
+}
 @keyframes linePlayAni {
   0% {
       background-position: 0 0;
   }
   100%{
       background-position: 60px 30px;
+  }
+}
+@keyframes linePlayAni2 {
+  0% {
+      background-position: 60px 30px;
+  }
+  100%{
+    background-position: 0 0;
   }
 }
