--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
-@import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
-@import './element-ui.scss';
-@import './sidebar.scss';
+@import "./variables.scss";
+@import "./mixin.scss";
+@import "./transition.scss";
+@import "./element-ui.scss";
+@import "./sidebar.scss";
 
 body {
   height: 100%;
@@ -64,7 +64,7 @@ div:focus {
   padding: 20px;
 }
 
-.vdr{
+.vdr {
   border: none !important;
 }
 
@@ -74,25 +74,25 @@ div:focus {
   height: 100%;
   animation-name: linePlayAni;
   animation-duration: 0.5s;
-  animation-timing-function:linear;
-  animation-iteration-count:infinite;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
   background-size: 30px 30px;
   background-image: linear-gradient(
-      45deg,
-      #3246bc 25%,
-      transparent 25%,
-      transparent 50%,
-      #3246bc 50%,
-      #3246bc 75%,
-      transparent 75%,
-      transparent
+    45deg,
+    #3246bc 25%,
+    transparent 25%,
+    transparent 50%,
+    #3246bc 50%,
+    #3246bc 75%,
+    transparent 75%,
+    transparent
   );
 }
 
 .linePlayBox {
-  &:before{
+  &:before {
     content: "";
-    position:absolute;
+    position: absolute;
     width: 100%;
     height: 100%;
     background-image: url(../images/line/lineBg.png);
@@ -102,17 +102,94 @@ div:focus {
 }
 @keyframes linePlayAni {
   0% {
-      background-position: 0 0;
+    background-position: 0 0;
   }
-  100%{
-      background-position: 60px 30px;
+  100% {
+    background-position: 60px 30px;
   }
 }
 @keyframes linePlayAni2 {
   0% {
-      background-position: 60px 30px;
+    background-position: 60px 30px;
   }
-  100%{
+  100% {
     background-position: 0 0;
+  }
+}
+
+//列表公共头
+.normalTop {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 20px;
+
+  //搜索框
+  .search-box {
+    float: left;
+    white-space: nowrap;
+
+    .inp-box {
+      float: left;
+
+      .el-input {
+        width: 300px;
+        margin-right: 20px;
+      }
+    }
+  }
+  .controlBtnBox {
+    float: right;
+  }
+}
+
+// 列表公共主体
+.normalMain {
+  float: left;
+  width: 100%;
+}
+
+//列表公共分页
+.normalPage {
+  float: left;
+  width: 100%;
+  text-align: left;
+
+  .el-pagination {
+    float: left;
+    margin: 20px 0;
+  }
+}
+
+//公共新增编辑左右类型弹窗
+.doubleFormDialog {
+  .el-form {
+    width: 100%;
+    overflow: hidden;
+
+    .el-form-item {
+      width: 49%;
+      float: left;
+
+      &:nth-child(2n) {
+        float: right;
+      }
+    }
+  }
+}
+//默认弹窗样式
+.normalDialog {
+  .el-dialog__body {
+    width: 100%;
+    overflow-x: hidden;
+
+    .el-select,.el-input-number,.el-date-editor{
+      width: 100%;
+    }
+  }
+  
+  .btnBox {
+    width: 100%;
+    float: right;
+    text-align: right;
   }
 }
