--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -132,7 +132,7 @@ div:focus {
       float: left;
 
       .el-input {
-        width: 300px;
+        width: 200px;
         margin-right: 20px;
       }
     }
@@ -175,6 +175,15 @@ div:focus {
       }
     }
   }
+}
+
+//弹窗剧中
+.el-dialog{
+  margin-top: 0 !important;
+  margin-left: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
 }
 //默认弹窗样式
 .normalDialog {
